tidy code + price chart borders

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   --bg-color: #1b1b25;
   --text: #FEFEFE;
   --light-blue: #5582D6;
+  --muted-blue: #434f7a;
   --green: #95ffba;
   --red: #c1796c;
 }
